Added open-source code link

--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@
             </div>
           </div>
         </footer>
+        <div class="source-code">
+          <a
+            href="https://github.com/RenaLo/Weather-App"
+            target="_blank"
+            class="source-code-link"
+            >Open-source code</a
+          >
+          by Verena Lo
+        </div>
       </div>
     </div>
     <script src="src/index.js"></script>
