Added weather icon of API

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
               </ul>
             </div>
 
-            <div class="col">
-              <i class="fas fa-sun main-emoji"></i>
+            <div class="col icon">
+              <img src=""
+              alt=""
+              id="weather-icon" />
+              
             </div>
 
             <div class="col">
