Fixed class of weather-data

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
           <div class="city-name" id="city"></div>
 
-          <div class="row weather-data">
-            <div class="col">
+          <div class="row description">
+            <div class="col weather-data">
               <ul>
                 <li>
-                  <span id="max-temp"></span><sup>°C</sup> /
-                  <span id="min-temp"></span><sup>°C</sup>
+                  <span  id="max-temp"></span><sup>°C</sup> /
+                  <span  id="min-temp"></span><sup>°C</sup>
                 </li>
                 <li>
                   <h1 class="tempSky">
@@ -81,7 +81,7 @@
               
             </div>
 
-            <div class="col">
+            <div class="col weather-data">
               <ul>
                 <li><h1 class="tempSky" id="sky"></h1></li>
                 <li>
