--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             type="text"
             placeholder="Enter city name"
             autofocus="on"
+            autocomplete="off"
           />
           <button type="submit" class="btn btn-outline-dark">
             <i class="fas fa-search"></i>
