Add conversion fahrenheit - celsius

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <li>
                   <h1 class="tempSky">
                     <span id="current-temp"></span
-                    ><sup class="temp-unit">°C</sup>
+                    ><sup class="temp-unit"><a href="#" id="celsius-temp" class="active"> °C</a> | <a href="#" id="fahrenheit-temp">°F</a></sup>
                   </h1>
                 </li>
-                <li>Real feel: <span id="real-feel"></span><sup>°C</sup></li>
+                <li>Real feel: <span id="real-feel"></span><sup>°C </sup></li>
               </ul>
             </div>
 
