Deleted celsius unit

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <div class="col weather-data">
               <ul>
                 <li>
-                  <span id="max-temp"></span><sup>°C</sup> /
-                  <span id="min-temp"></span><sup>°C</sup>
+                  <span id="max-temp"></span> ° / <span id="min-temp"></span> °
                 </li>
                 <li>
                   <h1 class="tempSky">
@@ -74,7 +73,7 @@
                     >
                   </h1>
                 </li>
-                <li>Real feel: <span id="real-feel"></span><sup>°C </sup></li>
+                <li>Real feel: <span id="real-feel"></span> °</li>
               </ul>
             </div>
 
