Added daily forecast
deleted daily forecast in HTML

--- a/index.html
+++ b/index.html
@@ -98,48 +98,8 @@
           <div class="row temperature-profile" id="temperature-forecast"></div>
         </section>
 
-        <footer class="weather-forecast">
-          <div class="row weather-forecast">
-            <div class="col otherDays">
-              <ul>
-                <li id="otherDays-1"></li>
-                <li>
-                  <i class="fas fa-sun"></i>
-                </li>
-                <li>12<sup>°C</sup> / 2<sup>°C</sup></li>
-              </ul>
-            </div>
-            <div class="col otherDays">
-              <ul>
-                <li id="otherDays-2"></li>
-                <li>
-                  <i class="fas fa-cloud-sun"></i>
-                </li>
-                <li>9<sup>°C</sup> / 3<sup>°C</sup></li>
-              </ul>
-            </div>
-            <div class="col otherDays">
-              <ul>
-                <li id="otherDays-3"></li>
-                <li><i class="fas fa-cloud-sun"></i></li>
-                <li>9<sup>°C</sup> / 5<sup>°C</sup></li>
-              </ul>
-            </div>
-            <div class="col otherDays">
-              <ul>
-                <li id="otherDays-4"></li>
-                <li><i class="fas fa-cloud-sun"></i></li>
-                <li>8<sup>°C</sup> / 5<sup>°C</sup></li>
-              </ul>
-            </div>
-            <div class="col otherDays">
-              <ul>
-                <li id="otherDays-5"></li>
-                <li><i class="fas fa-cloud-sun"></i></li>
-                <li>9<sup>°C</sup> / 5<sup>°C</sup></li>
-              </ul>
-            </div>
-          </div>
+        <footer class="daily-weather-forecast">
+          <div class="row daily-forecast" id="daily-forecast"></div>
         </footer>
         <div class="source-code">
           <a
