Added weekdays for forecast

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
         <footer class="daily-weather-forecast">
           <div class="row daily-forecast" id="daily-forecast"></div>
+          <div class="row daily-forecast" id="next-day"></div>
         </footer>
         <div class="source-code">
           <a
